TravelAnalysisCLI updated.